--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
-<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/thinline.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="./style.css">
 <body>
     <header>
         <div class="orqa-rang">
-                 <div class="container"><nav>
+                    <div class="container"><nav>
         <div class="nav-chap">
-            BrandName
+            <h1> BrandName</h1> 
         </div>
         <div class="nav-orta">
             <ul>
@@ -33,49 +31,45 @@
 
 
 </div>  
-   <!-- orta qism -->
+    <!-- orta qism -->
 <div class="salom">
     <div class="div1">
         <div class="div2">
-                 <h1 id="headline">We Ensure A Best <br> Insurance Service</h1>
-    <h4 id="headline">We know how large objects will act,but things on a 
+        <h1 id="headline">We Ensure A Best <br> Insurance Service</h1>
+    <p>We know how large objects will act,but things on a 
         <br> small scale just do not act that way.
-    </h4>    
+    </p>    
         </div>
-   <div class="div3">
-        <span><a class="button" href="#">Get Quote Now</a></span> 
-   <span><a class="button" href="#">Learn More</a></span> 
-  </div>
- 
+    <div class="div3">
+        <a class="button" href="#">Get Quote Now</a>
+        <a class="orqarang" class="button" href="#">Learn More</a>
     </div>
- 
-  
+    </div>
 </div>
         </div>
 
     </header>
-  <!-- header end -->
+    <!-- header end -->
 
 <div class="katta">
     <div class="container">
-  <div class="katta1">
-      <div class="bir1">
-          <i class="fas fa-home"></i>
+    <div class="katta1">
+        <div class="bir1">
 <h1>Peace of Mind</h1>
 <p>the quick fox jumps over the <br>
     lazy dog</p>
-      </div>
-      <div class="ikki2">
-        <i class="fas fa-home"></i>
+        </div>
+        <div class="ikki2">
+        <i class="fas fa-users fa-2x"></i>
         <h1>Set For Life</h1>
         <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing.</p>
-      </div>
-      <div class="uch3">
+        </div>
+        <div class="uch3">
         <i class="fas fa-home"></i>
         <h1>100% Statifactor</h1>
         <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing.</p>
-      </div>
-  </div>  
+        </div>
+        </div>  
 </div>
 </div>
 
